syntax = "proto3";
package tutorial;
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Pivot-Studio/pivot-chat/pb";

message GroupMessageRequest {
     int64 user_id = 1;
     int64 group_id = 2;
     int64 sync_seq = 3;
     int64 limit = 4;
}

message GroupMessageResponse {
     int64 user_id = 1;
     int64 group_id = 2;
     string data = 3;
     int64 sender_id = 4;
     int64 seq = 5;
     int64 reply_to = 6;
     int64 type = 7;
     google.protobuf.Timestamp time = 8;
}

message UserJoinGroupRequest {
    int64 user_id = 1;
    int64 group_id = 2;
}

message UserJoinGroupResponse {
    int64 user_num = 1;
    int64 group_id = 2;
    string name = 3;
    string introduction = 4;
    int64 owner_id = 5;
    google.protobuf.Timestamp create_time = 6;
}

enum PhoneType {
	PackageType_PT_ERR = 0;
	PackageType_PT_SIGN_IN = 1;
	PackageType_PT_SYNC  = 2;
	PackageType_PT_HEARTBEAT  = 3;
	PackageType_PT_MESSAGE    = 4;
	PackageType_PT_JOINGROUP  = 5;
}

message PackageRequest {
    int64 type = 1;
    oneof payload {
        UserJoinGroupRequest user_join_group_request = 2;
        GroupMessageRequest group_message_request = 3;
    }
}

message PackageResponse {
    int64 type = 1;
    oneof payload {
        UserJoinGroupResponse user_join_group_response = 2;
        GroupMessageResponse group_message_response = 3;
    }
}

service 